fix: remove scrollbar padding

--- a/src/base/scrollbar.css
+++ b/src/base/scrollbar.css
@@ -1,6 +1,6 @@
 ::-webkit-scrollbar {
-  width: 14px;
-  height: 14px;
+  width: 7px;
+  height: 7px;
 }
 
 ::-webkit-scrollbar-track {
@@ -8,8 +8,6 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  border: 4px solid transparent;
-  background-clip: padding-box;
   border-radius: 9999px;
   @apply bg-gray-500/25;
 }
