--- a/src/style/output.css
+++ b/src/style/output.css
@@ -446,6 +446,20 @@ video {
   display: none;
 }
 
+::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 9999px;
+  background-color: rgb(100 116 139 / 0.25);
+}
+
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -635,6 +649,10 @@ video {
   height: 2.5rem;
 }
 
+.h-\[5000px\] {
+  height: 5000px;
+}
+
 .h-\[200px\] {
   height: 200px;
 }
@@ -671,6 +689,11 @@ video {
   border-width: 1px;
 }
 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-gray-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(100 116 139 / var(--tw-bg-opacity));
@@ -678,6 +701,16 @@ video {
 
 .bg-gray-500\/25 {
   background-color: rgb(100 116 139 / 0.25);
+}
+
+.bg-primary-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(158 176 240 / var(--tw-bg-opacity));
+}
+
+.bg-primary-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(117 144 235 / var(--tw-bg-opacity));
 }
 
 .px-4 {
@@ -778,7 +811,7 @@ video {
 .font-display-bold-1 {
   font-size: 32px;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 699;
   line-height: 56px;
 }
 
@@ -792,7 +825,7 @@ video {
 .font-display-bold-2 {
   font-size: 28px;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 699;
   line-height: 48px;
 }
 
@@ -806,7 +839,7 @@ video {
 .font-h1-bold {
   font-size: 25px;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 699;
   line-height: 56px;
 }
 
@@ -820,7 +853,7 @@ video {
 .font-h2-bold {
   font-size: 22px;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 699;
   line-height: 36px;
 }
 
@@ -834,7 +867,7 @@ video {
 .font-h3-bold {
   font-size: 20px;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 699;
   line-height: 32px;
 }
 
@@ -848,7 +881,7 @@ video {
 .font-h4-bold {
   font-size: 18px;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 699;
   line-height: 32px;
 }
 
@@ -862,7 +895,7 @@ video {
 .font-h5-bold {
   font-size: 16px;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 699;
   line-height: 28px;
 }
 
@@ -876,7 +909,7 @@ video {
 .font-h6-bold {
   font-size: 14px;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 699;
   line-height: 24px;
 }
 
@@ -1007,20 +1040,4 @@ video {
   font-style: normal;
   font-weight: 600;
   line-height: 12px;
-}
-
-.dgs-scrollbar::-webkit-scrollbar {
-  width: 14px;
-  height: 14px;
-}
-
-.dgs-scrollbar::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-.dgs-scrollbar::-webkit-scrollbar-thumb {
-  border: 4px solid transparent;
-  background-clip: padding-box;
-  border-radius: 9999px;
-  background-color: rgb(100 116 139 / 0.25);
 }
